--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "set GENERATE_SOURCEMAP=false && react-scripts build",
+    "build": "react-scripts build && del build/static/js/*.map",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
